# sfml-snake

./: CMakeLists.txt  README.md  main.cpp
game/: Apple.cpp  Apple.h  Game.cpp  Game.h  Snake.cpp  Snake.h
